anthos-bundles/nist-800-r5/block-secrets-of-type-basic-auth.yaml
# Copyright 2023 Google LLC
#
# This is “Software” that is licensed under the “General Software” section of
# the Service Specific Terms (https://cloud.google.com/terms/service-terms) for
# usage in accordance with the following “Scope of Use”: This file may only be
# used on an Anthos cluster, including any associated ci/cd use. “Anthos
# cluster” is defined as “A Cluster (of any kind) registered to a fleet project
# where the Anthos API is enabled”.
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sBlockObjectsOfType
metadata:
  name: nist-800-r5-block-secrets-of-type-basic-auth
  labels:
    policycontroller.gke.io/bundleName: nist-800-r5
  annotations:
    policycontroller.gke.io/constraintData: |-
      "{
        bundleName: 'nist-800-r5',
        bundleDisplayName: 'NIST 800 r5',
        bundleLink: 'https://github.com/GoogleCloudPlatform/acm-policy-controller-library/tree/master/anthos-bundles/nist-800-r5',
        bundleVersion: '202306.0-preview',
        bundleDescription: 'Use the NIST SP 800 r5 policy bundle with Policy Controller to evaluate the compliance of your cluster resources against some aspects of the NIST SP 800-53 r5 and NIST SP 800-190 Appendix B controls.',
        controlNumbers: '[SC-7,SA-8,CM-3,CM-6,AC-4,AC-16,SI-7]',
        severity: 'UNASSIGNED',
        description: 'Restricts the use of basic-auth type secrets.',
        remediation: 'Cannot use basic-auth type secrets. Use an alternative. See "Secrets" for more information: https://kubernetes.io/docs/concepts/configuration/secret/',
        minimumTemplateLibraryVersion: '1.14.0'
      }"
spec:
  enforcementAction: dryrun
  match:
    kinds:
      - apiGroups:
          - ""
        kinds:
          - Secret
  parameters:
    forbiddenTypes:
      - kubernetes.io/basic-auth
