anthos-bundles/nist-800-r5/require-av-daemonset.yaml
# Copyright 2023 Google LLC
#
# This is “Software” that is licensed under the “General Software” section of
# the Service Specific Terms (https://cloud.google.com/terms/service-terms) for
# usage in accordance with the following “Scope of Use”: This file may only be
# used on an Anthos cluster, including any associated ci/cd use. “Anthos
# cluster” is defined as “A Cluster (of any kind) registered to a fleet project
# where the Anthos API is enabled”.
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequireDaemonsets
metadata:
  name: nist-800-r5-require-av-daemonset
  labels:
    policycontroller.gke.io/bundleName: nist-800-r5
  annotations:
    policycontroller.gke.io/constraintData: |-
      "{
        bundleName: 'nist-800-r5',
        bundleDisplayName: 'NIST 800 r5',
        bundleLink: 'https://github.com/GoogleCloudPlatform/acm-policy-controller-library/tree/master/anthos-bundles/nist-800-r5',
        bundleVersion: '202306.0-preview',
        bundleDescription: 'Use the NIST SP 800 r5 policy bundle with Policy Controller to evaluate the compliance of your cluster resources against some aspects of the NIST SP 800-53 r5 and NIST SP 800-190 Appendix B controls.',
        controlNumbers: '[SI-3]',
        severity: 'UNASSIGNED',
        description: 'Requires the presence of an Anti-Virus daemonset.',
        remediation: 'Add an Anti-Virus daemonset with the specified name and namespace. See "Kubernetes ClamAV container" for an example: https://cloud.google.com/community/tutorials/gcp-cos-clamav',
        minimumTemplateLibraryVersion: '1.14.0'
      }"
spec:
  match:
    kinds:
      - apiGroups:
          - ""
        kinds:
          - Namespace
  enforcementAction: dryrun
  parameters:
    requiredDaemonsets:
      - name: clamav
        namespace: clamav
